test/libsolidity/syntaxTests/inline_arrays/unnamed_types_in_inline_array_1.sol
contract C {
    function f() public {
        [msg];
    }
}
// ----
// TypeError 9563: (48-51): Invalid mobile type.
